this commit makes some modfications

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="col-md-6 d-none d-md-block" data-aos="flip-up" data-aos-duration="2000">
-          <img class="carousel-img" src="/content/slide/Blue/donation.jpg" alt="" srcset="">
+          <img class="carousel-img" src="./content/donation.jpg" alt="" srcset="">
         </div>
       </div>
     </div>
